# cargo-extract

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
benches/: extract.rs
src/: lib.rs  main.rs
src/cli/: extract.rs  mod.rs
tests/: error_messages.rs  local_mainfest.rs  usage.rs
