[package]
name = "cargo-extract"
version = "0.3.2"
edition = "2024"
description = "Cargo subcommand to extract information from Cargo.toml files"
repository = "https://github.com/LimeEng/cargo-extract/"
license = "MIT"
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
    "development-tools::cargo-plugins",
]

exclude = [".github/**"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
toml = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
criterion = "0.8"
indoc = "2.0"

[[bench]]
name = "extract"
harness = false
